# code_snippets

fft/: CMakeLists.txt  README.md  fft.cpp  main.cpp
fft/glad/: glad.c  glad.h
fifo/: fifo.h  main.cpp
ogl_2d_basic/: AnimObj.cpp  AnimObj.h  BaseObj.cpp  BaseObj.h  CMakeLists.txt  Picture.cpp  Picture.h  README.md  Rectangle.cpp  Rectangle.h  Shader.h  TextObj.cpp  TextObj.h  main.cpp
websocket/: CMakeLists.txt  README.md  main.cpp
